Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -1286,6 +1286,7 @@ a {
         flex-direction: column;
         justify-content: center;
         text-align: center;
+        margin-top: 30px;
     }
 
     #footer-social {
